--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "date-fns": "^3.3.1",
     "@supabase/supabase-js": "^2.39.7",
     "@tanstack/react-query": "^5.28.4",
-    "@supabase/auth-helpers-react": "^0.3.1"
+    "@supabase/auth-helpers-react": "^0.3.1",
+    "framer-motion": "^11.0.5",
+    "react-intersection-observer": "^9.6.0",
+    "react-swipeable": "^7.0.1",
+    "react-use": "^17.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
