--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "scrape": "node scripts/scraper.js"
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
@@ -21,7 +22,13 @@
     "framer-motion": "^11.0.5",
     "react-intersection-observer": "^9.6.0",
     "react-swipeable": "^7.0.1",
-    "react-use": "^17.5.0"
+    "react-use": "^17.5.0",
+    "puppeteer": "^22.4.0",
+    "p-retry": "^6.2.0",
+    "p-queue": "^7.4.1",
+    "robots-parser": "^3.0.1",
+    "chalk": "^5.3.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
