--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "slideinsight",
+  "name": "slidebook",
   "private": true,
   "version": "0.1.0",
   "type": "module",
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "scrape": "node scripts/scraper.js"
+    "preview": "vite preview"
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
@@ -28,7 +27,15 @@
     "p-queue": "^7.4.1",
     "robots-parser": "^3.0.1",
     "chalk": "^5.3.0",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "socket.io-client": "^4.7.2",
+    "quill": "^1.3.7",
+    "react-beautiful-dnd": "^13.1.1",
+    "zustand": "^4.4.1",
+    "nanoid": "^5.0.3",
+    "react-colorful": "^5.6.1",
+    "html-to-image": "^1.11.11",
+    "jspdf": "^2.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
